--- a/src/layout-reto/styles.scss
+++ b/src/layout-reto/styles.scss
@@ -1,5 +1,3 @@
-$gap-5px: 5px;
-
 * {
   margin: 0px;
   padding: 0px;
@@ -61,7 +59,8 @@ header {
 }
 
 .section-title {
-  & #top-text {
+  & #full-text,
+  & #partial-text {
     font-weight: bold;
   }
 
@@ -80,20 +79,17 @@ header {
   }
 }
 
-section {
-  &.top {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(225px, 1fr));
-    column-gap: $gap-5px;
-  }
-
-  & img {
-    width: 100%;
-    cursor: pointer;
-  }
+section img {
+  width: 100%;
+  height: 100%;
+  cursor: pointer;
 }
 
 section.top {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(225px, 1fr));
+  column-gap: 5px;
+
   .top-item:nth-child(1) {
     order: 5;
   }
@@ -122,5 +118,43 @@ section.top {
     .top-item:nth-child(2) {
       display: none;
     }
+  }
+}
+
+section.first {
+  box-sizing: border-box;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+  padding: 5px;
+
+  & > .item {
+    min-width: 250px;
+    height: 180px;
+    flex: 1;
+  }
+}
+
+section.second {
+  box-sizing: border-box;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+  padding: 5px;
+
+  & > .item {
+    min-width: 250px;
+    height: 180px;
+    flex: 1;
+  }
+}
+
+section.first img,
+section.second img {
+  transition: transform 0.3s, box-shadow 0.3s;
+
+  &:hover {
+    transform: scale(1.2);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
   }
 }
